<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">stacklr</string>
    
    <!-- task error -->
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>

    <!-- preference -->
    <string name="not_wifi_only">Use Wi-Fi or mobile network</string>
    <string name="wifi_only">Use Wi-Fi only</string>
    <string name="pref_wifi_only">Use Wi-Fi only</string>

    <string name="google_tasks_category">Google tasks</string>
    <string name="use_google_tasks">on</string>
    <string name="do_not_use_google_tasks">off</string>
    <string name="pref_use_google_tasks">Load google tasks</string>
    <string name="pref_remove_completed_gtask">Remove completed google tasks</string>

    <string name="google_calendar_category">Google calendar</string>

    <string name="pref_load_google_calendar">Load google calendar</string>
    <string name="pref_calendar_name_to_load">Calendar name to load</string>
    <string name="pref_log_google_calendar">Log events to google calendar</string>
    <string name="pref_calendar_name_to_log">Calendar name to log</string>

    <string name="error_calendar_not_found">Google calendar: %1$s is not found</string>
    
    <string name="pref_version">Version</string>
    <string name="pref_author">Author: Takashi Masuyama</string>
    <string name="pref_author_summary">mamewotoko@gmail.com</string>

    <string name="wifi_is_not_available">Wi-Fi is not avaiable</string>

    <!--
	<string name="menu_save">Save</string>
    -->
    <string name="menu_undo">Undo</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_preference">Preference</string>

    <string name="remove">Remove</string>
    <string name="later_date">Date</string>
    <string name="checkbox_write_to_calendar">write to google calendar</string>

    <!-- Item.ITEM_TYPE_XXX -->
    <string-array name="item_type">
      <item>Top</item>
      <item>Food</item>
      <item>Action Item</item>
      <item>Bottom</item>
    </string-array>
    
    <string-array name="groups">
      <item>To buy list</item>
      <item>Stock</item>
      <item>Shelf</item>
      <item>History</item>
      <item>Later</item>
    </string-array>

</resources>
